src/objects/Ownership_Approval__c.object
<CustomObject>
    <description>This object will provide the ability for a PSR to request ownership changes at the account level.  A PSR will also be able to request approval for Actual Sales that are currently associated to the wrong opportunity to be moved to the correct opportunity</description>
    <fields>
        <fullName>Acct_Manager__c</fullName>
        <formula>IF (New_Opportunity_Entry__r.Owner.RPSM_New__c  =  ActualSales__r.Account_Name__r.Owner.RPSM_New__c, &apos;True&apos;,&apos;False&apos;)</formula>
        <label>Same Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualSales__c</fullName>
        <label>Actual Sales</label>
        <referenceTo>Actual_Sales__c</referenceTo>
        <relationshipName>Ownership_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>ActualSales__r.Purchase_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Account__c</fullName>
        <formula>New_Opportunity_Entry__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Opportunity_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Actual Sales Updates</relationshipLabel>
        <relationshipName>Ownership_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Owner_Email__c</fullName>
        <label>New Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <formula>New_Opportunity_Entry__r.Owner.FirstName &amp;&quot; &quot;&amp;
New_Opportunity_Entry__r.Owner.LastName</formula>
        <label>New Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_RPSM__c</fullName>
        <formula>New_Opportunity_Entry__r.Owner.RPSM_New__r.FirstName &amp;&quot; &quot;&amp;
New_Opportunity_Entry__r.Owner.RPSM_New__r.LastName</formula>
        <label>New RPSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Account_a__c</fullName>
        <description>Old account used to be populated at creation to have a static old account</description>
        <label>Old Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Opportunity_Text__c</fullName>
        <label>Old Opportunity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Opportunity__c</fullName>
        <formula>ActualSales__r.Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Opportunity F</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Owner_Email__c</fullName>
        <label>Old Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Old_Owner_a__c</fullName>
        <description>used for a static of the old owner</description>
        <label>Old Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_RPSM_Email__c</fullName>
        <label>Old RPSM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Old_RPSM__c</fullName>
        <formula>ActualSales__r.Account_Name__r.Owner.RPSM_New__r.FirstName &amp; &quot; &quot; &amp; 
ActualSales__r.Account_Name__r.Owner.RPSM_New__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old RPSM F</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_RPSM_a__c</fullName>
        <description>static RPSM</description>
        <label>Old RPSM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Actual Sales Update</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>New_Account__c</columns>
        <columns>Old_Account_a__c</columns>
        <columns>New_Opportunity_Entry__c</columns>
        <columns>Old_Opportunity_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Comp</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>New_Account__c</columns>
        <columns>Old_Account_a__c</columns>
        <columns>New_Opportunity_Entry__c</columns>
        <columns>Old_Opportunity_Text__c</columns>
        <columns>ActualSales__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>All - Completed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>New_Account__c</columns>
        <columns>Old_Account_a__c</columns>
        <columns>New_Opportunity_Entry__c</columns>
        <columns>Old_Opportunity_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Not Submitted,Approved,Rejected</value>
        </filters>
        <label>All - In Progress</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_rejected</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>New_Account__c</columns>
        <columns>Old_Account_a__c</columns>
        <columns>New_Opportunity_Entry__c</columns>
        <columns>Old_Opportunity_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>All - Rejected</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OA-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actual Sales Updates</pluralLabel>
    <recordTypes>
        <fullName>Account_Ownership_Change</fullName>
        <active>true</active>
        <description>Account ownership change request.  This will be validated by the RPSM of the current owner</description>
        <label>Account Ownership Change</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>